--- a/ovinos/templates/ovinos/editar_ovino.html
+++ b/ovinos/templates/ovinos/editar_ovino.html
@@ -2,13 +2,13 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Editar Ovino</title>
+    <title>Editar Animal</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <div class="container my-0">
 
-    <h1 class="mb-4 text-center">Editar Ovino: {{ ovino.numero_brinco }}</h1>
+    <h1 class="mb-4 text-center">Editar Animal: {{ ovino.numero_brinco }}</h1>
 
     <div class="card shadow">
         <div class="row g-0">
